# redis-promql

./: .gitignore  Cargo.toml  README.md  config-local.txt  config-osx.txt  config.txt  requirements.txt
.cargo/: config.toml
docs/commands/: add.md  collate.md  create.md  join.md  label-values.md  union.md
src/: config.rs  error.rs  globals.rs  lib.rs  provider.rs
src/aggregators/: mod.rs
src/common/: bitwriter.rs  constants.rs  decimal.rs  humanize.rs  label_compressor.rs  labels.rs  mod.rs  parse.rs  time.rs  types.rs
src/common/bytes_util/: fast_regex_matcher.rs  fast_string_matcher.rs  fast_string_transformer.rs  mod.rs  string_transform_cacher.rs
src/common/encoding/: mod.rs  temp.rs  utils.rs  uvarint.rs  varbit.rs  varbit_ts.rs  varbit_xor.rs  varint.rs
src/common/regex_util/: match_handlers.rs  mod.rs  prefix_cache.rs  prom_regex.rs  prom_regex_test.rs  regex_utils.rs  regexp_cache.rs  simplify.rs  tag_filter.rs  tag_filters_test.rs
src/common/utils/: hash.rs  mod.rs  time.rs
src/executor/: commands.rs  misc.rs  mod.rs
src/gorilla/: decoder.rs  encoder.rs  mod.rs  xor_encoder.rs  xor_iterator.rs
src/gorilla/stream/: buffered_reader.rs  buffered_writer.rs  mod.rs
src/index/: event_handler.rs  filters.rs  index_key.rs  index_tests.rs  index_type.rs  mod.rs  timeseries_index.rs
src/iter/: aggregator.rs  group_aggregation_iter.rs  mod.rs  multi_series_sample_iter.rs  sample_iter.rs  sample_slice_iterator.rs  shared_vec_iter.rs  vec_sample_iterator.rs
src/iter/join/: join_asof_iter.rs  join_full_iter.rs  join_iter.rs  join_left_exclusive_iter.rs  join_left_iter.rs  join_right_exclusive_iter.rs  mod.rs
src/joins/: README.md  asof.rs  data_elements.rs  index.rs  int_utils.rs  joins.rs  mod.rs  time_utils.rs
src/module/: arg_parse.rs  data_type.rs  function_add.rs  function_alter.rs  function_create.rs  function_del.rs  function_get.rs  function_madd.rs  function_metadata.rs  function_metadata_series.rs  function_query.rs  function_range.rs  function_stats.rs  label_filters.rs  macros.rs  mod.rs  range_utils.rs  result.rs  timeseries_api.rs  transform_op.rs  ts_db.rs  types.rs  utils.rs
src/module/commands/: active_queries.rs  add.rs  aggregator.rs  alter.rs  asof.rs  collate.rs  create.rs  delete_key_range.rs  delete_range.rs  delete_series.rs  info.rs  join.rs  join_asof.rs  join_asof_iter.rs  join_full_iter.rs  join_inner_iter.rs  join_iter.rs  join_left_exclusive_iter.rs  join_left_iter.rs  join_right_exclusive_iter.rs  join_right_iter.rs  madd.rs  metadata.rs  mget.rs  mod.rs  mrange.rs  query.rs  range.rs  range_arg_parse.rs  range_utils.rs  reset_rollup_cache.rs  stats.rs  top_queries.rs  union.rs
src/relabel/: graphite.rs  graphite_test.rs  if_expression.rs  if_expression_test.rs  label_filter.rs  mod.rs  regex_parse.rs  relabel.rs  relabel_config.rs  relabel_test.rs  string_replacer.rs  submatch_replacer.rs  utils.rs
src/relabel/actions/: drop.rs  drop_equal.rs  drop_if_contains.rs  drop_if_equal.rs  graphite.rs  hashmod.rs  keep.rs  keep_equal.rs  keep_if_contains.rs  keep_if_equal.rs  label_drop.rs  label_keep.rs  label_map.rs  label_map_all.rs  lowercase.rs  mod.rs  replace.rs  replace_all.rs  uppercase.rs  utils.rs
src/rules/: mod.rs  rule.rs  types.rs  utils.rs
src/rules/alerts/: alert.rs  alert_manager.rs  alerting_rule.rs  alerts_error.rs  config.rs  constants.rs  executor.rs  group.rs  group_processor.rs  mod.rs  notifier.rs  recording_rule.rs  replay.rs
src/rules/alerts/datasource/: datasource.rs  fakes.rs  mod.rs  redis_datasource.rs  remote_write.rs
src/rules/alerts/notifiers/: mod.rs  notifier.rs  null_notifier.rs  pubsub_notifier.rs  stream_notifier.rs
src/rules/alerts/template/: mod.rs  template.rs  template_test.rs
src/rules/recording/: mod.rs
src/rules/relabel/: graphite.rs  graphite_test.rs  if_expression.rs  if_expression_test.rs  label_filter.rs  mod.rs  relabel.rs  relabel_config.rs  relabel_test.rs  utils.rs
src/storage/: aggregations.rs  chunk.rs  compressed_chunk.rs  compressed_segment.rs  compressed_series.rs  constants.rs  dedup.rs  defrag.rs  encoding.rs  gorilla_chunk.rs  merge.rs  mod.rs  pco_chunk.rs  serialization.rs  series_data.rs  slice.rs  slice_iter.rs  time_series.rs  timestamps_filter_iterator.rs  tsz_buffered_read.rs  types.rs  uncompressed_chunk.rs  utils.rs  xor_chunk.rs
src/storage/gorilla/: decoder.rs  encoder.rs  mod.rs
src/stream_aggregation/: avg.rs  count_samples.rs  count_series.rs  dedup.rs  dedup_tests.rs  deduplicator.rs  fast_histogram.rs  histogram_bucket.rs  interner.rs  labels_compressor.rs  last.rs  max.rs  min.rs  mod.rs  quantiles.rs  rate.rs  stddev.rs  stdvar.rs  stream_aggr.rs  sum_samples.rs  timeseries.rs  total.rs  unique_samples.rs  utils.rs
src/tests/: mod.rs  pyproject.toml  requirements.txt  test_helpers.rs  utils.rs
src/tests/data/: mod.rs  power_consumption.rs
src/tests/generators/: generators.rs  mackey_glass.rs  mod.rs  rand.rs
src/tests/integration/: README.md  test_create.py  tests.sh
src/tests/storage/: mod.rs
src/ts/: chunk.rs  compressed_chunk.rs  constants.rs  dedup.rs  duplicate_policy.rs  encoding.rs  merge.rs  mod.rs  series_data.rs  slice.rs  time_series.rs  types.rs  uncompressed_chunk.rs  utils.rs
src/ts/chunks/: chunk.rs  mod.rs
src/ts/chunks/compressed/: mod.rs
src/ts/chunks/compressed/common/: compressed_data.rs  mod.rs  serialize.rs
src/ts/chunks/compressed/quantile/: compress.rs  compressed_page_iterator.rs  mod.rs  quantile_compressed_chunk.rs
src/ts/chunks/uncompressed/: mod.rs
