[package]
name = "redis-promql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
binary-merge = "0.1"
blart = "0.2"
chrono = { version = "0.4", features = ["serde"] }
croaring = "2.0"
dynamic-lru-cache = "0.2"
enquote = "1.1"
get-size = { version = "^0.1", features = ["derive"] }
integer-encoding = "4.0"
linkme = "0.3"
lru_time_cache = "0.11"
metricsql_common = { git = "https://github.com/ccollie/metricsql", branch = "dev" }
metricsql_encoding = { git = "https://github.com/ccollie/metricsql", branch = "dev" }
metricsql_runtime = { git = "https://github.com/ccollie/metricsql", branch = "dev" }
metricsql_parser = { git = "https://github.com/ccollie/metricsql", branch = "dev" }
papaya = "0.1"
pco = "0.3"
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.13", features = ["union"] }
thiserror = "1"
rayon = "1.10"
regex = "1.10"
regex-syntax = { version = "0.8", features = [] }
timer = "0.2"
url = { version = "2.5", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rand = "0.8"
rand_distr = "0.4"
tracing = "0.1"
valkey-module = "0.1"
valkey-module-macros = "0.1"
async-trait = "0.1"
anyhow = "1.0"

[dev-dependencies]
test-case = "3.3.1"

[lib]
crate-type=["rlib", "cdylib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
target-cpu = "native"