[package]
name = "valkey-metrics"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Clayton Collie"]
readme = "README.md"
repository = "https://github.com/ccollie/ValkeyMetrics"
homepage = "https://github.com/ccollie/ValkeyMetrics"
description = "A Prometheus-like metric solution on top of Valkey"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
binary-merge = "0.1"
blart = "0.3"
bitstream-io = "2.5.3"
chrono = { version = "0.4", features = ["serde"] }
croaring = "2.1"
dynamic-lru-cache = "0.2"
enquote = "1.1"
get-size = { version = "^0.1", features = ["derive"] }
integer-encoding = "4.0"
linkme = "0.3"
lru_time_cache = "0.11"
min-max-heap = "1.3"
metricsql_common = { git = "https://github.com/ccollie/metricsql", branch = "dev" }
metricsql_encoding = { git = "https://github.com/ccollie/metricsql", branch = "dev" }
metricsql_runtime = { git = "https://github.com/ccollie/metricsql", branch = "dev" }
metricsql_parser = { git = "https://github.com/ccollie/metricsql", branch = "dev" }
joinkit = "0.2.0"
nom = "7.1"
papaya = "0.1"
futures = "0.3.31"
pco = "0.3"
phf = "0.11"
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "2.0.0-alpha.7", features = ["specialization", "std"] }
thiserror = "1"
rayon = "1.10"
regex = "1.10"
regex-syntax = { version = "0.8", features = [] }
timer = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rand = "0.8"
rand_distr = "0.4"
tracing = "0.1"
valkey-module = "0.1"
valkey-module-macros = "0.1"
async-trait = "0.1"

[dev-dependencies]
anyhow = "1.0"
test-case = "3.3.1"

[lib]
crate-type=["rlib", "cdylib"]
name = "valkey_metrics"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
target-cpu = "native"