[tool.poetry]
authors = ["Clayton Collie <collie.clayton@gmail.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Metrics/Monitoring",
    "Intended Audience :: Developers",
    "Intended Audience :: Redis/Valkey",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering",
    "Framework :: IPython",
]
description = "Promethus styled metrics on top of valkey/redis."
keywords = ["redis", "valkey", "timeseries"]
license = "Apache-2.0"
maintainers = ["Clayton Collie <collie.clayton@gmail.com>"]
name = "vkmetrics"
readme = "README.md" # Markdown files are supported
version = "0.1"

[project]
version = "0.1.0"
name = "vkmetrics" # Target file name of maturin build
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.poetry.dependencies]
numpy = ">=1.26"
python = ">=3.9,<3.13"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
pytest = "^6.2"
redis = "^4.0"
RLTest = "^0.7.10"

[tool.pytest.ini_options]
minversion = "6.0"
python_functions = "test_*.py bench_*.py*"
# python_files = check_*.py
# python_classes = Check
# addopts = "-ra -q"
# testpaths = [
#   "tests",
#   "integration",
# ]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"